--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <ul class="side-nav">
             <li class="is-active"><span>Home</span></li>
             <li><span>Works</span></li>
-            <li><span>About</span></li>
+            <li><span>About Kontol</span></li>
             <li><span>Contact</span></li>
             <li><span>Hire us</span></li>
           </ul>
